Added Settings dialog. Added parsing of file and directory naming from config.